--- a/style.css
+++ b/style.css
@@ -20,3 +20,33 @@
   padding: 9px 25px;
   cursor: pointer;
 }
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat1{
+    background-color: orange;
+}
+.cat2{
+    background-color: orchid;
+}
+.cat3{
+    background-color: blue;
+}
+.categories{
+    color: white;
+}
+ .categories img{
+     width: 100px;
+ }
+ .card{
+     border: none;
+     box-shadow: 5px 5px 10px lightgray;
+ }
+footer{
+    text-align: center;
+}
+
+#contact-us{
+    height: 300px;
+}
